# SlicerCustomAppTemplate

./: .pre-commit-config.yaml  .ruff.toml  README.md  README.rst  cookiecutter.json  noxfile.py
.github/: dependabot.yml
.github/workflows/: commit-message.yml  lint.yml
hooks/: pre_gen_project.py
{{cookiecutter.project_name}}/: .pre-commit-config.yaml  .ruff.toml  BUILD.md  BUILD_LINUX.md  BUILD_WINDOWS.md  CMakeLists.txt  CONTRIBUTING.md  CTestConfig.cmake  LICENSE  README.md
{{cookiecutter.project_name}}/.github/: dependabot.yml
{{cookiecutter.project_name}}/.github/workflows/: commit-message.yml  lint.yml
{{cookiecutter.project_name}}/Applications/: CMakeLists.txt
{{cookiecutter.project_name}}/Applications/App/: CMakeLists.txt  Main.cxx  qAppMainWindow.cxx
{{cookiecutter.project_name}}/Applications/{{cookiecutter.app_name}}App/: CMakeLists.txt  Main.cxx  q{{cookiecutter.app_name}}AppAboutDialog.cxx  q{{cookiecutter.app_name}}AppAboutDialog.h  q{{cookiecutter.app_name}}AppMainWindow.cxx  q{{cookiecutter.app_name}}AppMainWindow.h  q{{cookiecutter.app_name}}AppMainWindow_p.h  slicer-application-properties.cmake
{{cookiecutter.project_name}}/Applications/{{cookiecutter.app_name}}App/Resources/Settings/: DefaultSettings.ini
{{cookiecutter.project_name}}/Applications/{{cookiecutter.app_name}}App/Resources/UI/: q{{cookiecutter.app_name}}AppAboutDialog.ui
{{cookiecutter.project_name}}/Applications/{{cookiecutter.app_name}}App/Widgets/: qAppStyle.cxx  qAppStyle.h
{{cookiecutter.project_name}}/Modules/Scripted/Home/: CMakeLists.txt  Home.py
{{cookiecutter.project_name}}/Modules/Scripted/Home/Resources/: Home.qrc  HomeResources.qrc
{{cookiecutter.project_name}}/Modules/Scripted/Home/Resources/UI/: Home.ui  Settings.ui
